--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    html {
+        font-family: 'Inter', sans-serif;
+    }
+  }
+
 @media (prefers-color-scheme: dark) {
     .dark {
       background-color: #1a202c;
